fixed z-index issue

--- a/starterkit/layout.less
+++ b/starterkit/layout.less
@@ -44,6 +44,7 @@
     clear: left;
     width: @sidebar-second-width;
     min-width: 370px;
+    z-index: 1000;
   }
 }
 
